<resources>
    <string name="app_name">EventPlanner</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="event">Event</string>
    <string name="event_search">Search</string>
    <string name="groupEntity">Group</string>
    <string name="home">Home</string>
    <string name="snackbar_undo">Undo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">Status</string>
    <string name="title">Title</string>
    <string name="platform">Platform</string>
    <string name="Event_share">Share</string>
    <string name="eventName">EventName</string>
    <string name="city">City</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="dateText">DateText</string>
    <string name="statusText">StatusText</string>
    <string name="locationText">Location Text</string>
    <string name="groupName">GroupName</string>
    <string name="dateCreated">Created:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="groupname">GroupName</string>
    <string name="headimage">HeadImage</string>
    <string name="description">Description</string>
    <string name="favourite">Favourite</string>
    <string name="editgroup">editGroup</string>
    <string name="eventimage">EventImage</string>
    <string name="pricerangetext">priceRangeText</string>
    <string name="price_range">Price Range</string>
    <string name="isAvailable">false</string>
    <string name="availabillity">Availabillity</string>
    <string name="eventurl">eventUrl</string>
    <string name="event_url">Event URL</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="addresstext">addressText</string>
    <string name="citytext">cityText</string>
    <string name="searchicon">searchIcon</string>
    <string name="search">Search</string>
    <string name="country_code">Country Code</string>
    <string name="keyword">KeyWord</string>
    <string name="please_enter_your_desired_search_parameters">Please enter your desired search parameter/s!</string>
    <string name="ticketAvailability">TicketAvailability</string>
    <string name="add_to_group">Add to Group:</string>
    <string name="smth">Select a group to add the Event to</string>
</resources>
