<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Fragments.GroupEditFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.v7.widget.CardView
            android:id="@+id/cardViewEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:contentPadding="16dp"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/groupListName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/groupName" />

                <EditText
                    android:id="@+id/groupEditNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="groupName"
                    android:hint="@string/groupname"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/groupDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/descriptionEditInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/description"
                    android:hint="@string/description"
                    android:inputType="textMultiLine" />

                <CheckBox
                    android:id="@+id/favouriteCheckbox"
                    style="?android:attr/starStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favourite" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>